--- a/.github/workflows/deploy-appservice.yml
+++ b/.github/workflows/deploy-appservice.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "main" ]
   workflow_dispatch:
 
-# 1) Permisos para solicitar el ID Token (OIDC)
+# Permisos necesarios para OIDC
 permissions:
   id-token: write
   contents: read
@@ -31,7 +31,7 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
 
-      # 2) Comprobación temprana: asegúrate de que los secrets EXISTEN
+      # Comprobación: que existan los secrets
       - name: Validate OIDC inputs
         run: |
           if [ -z "${{ secrets.AZURE_CLIENT_ID }}" ]; then echo "ERROR: Falta secret AZURE_CLIENT_ID"; exit 1; fi
@@ -52,15 +52,13 @@ jobs:
           cd deploy
           zip -r ../app.zip .
 
-      # 3) Login a Azure con OIDC (forzado)
+      # Azure login usando OIDC (auto-detectado). NO usar auth-type aquí.
       - name: Azure Login (OIDC)
         uses: azure/login@v2
         with:
-          auth-type: ID_TOKEN                # <--- fuerza OIDC
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          audience: api://AzureADTokenExchange
 
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
